0.1.2: Added E2e mysql, preparing for memory e2e test