@@ -1,29 +1,31 @@
 package io.github.askmeagain.meshinery.connectors.mysql;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import io.github.askmeagain.meshinery.core.common.AccessingInputSource;
 import io.github.askmeagain.meshinery.core.common.DataContext;
 import io.github.askmeagain.meshinery.core.other.Blocking;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
+import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import org.jdbi.v3.core.Jdbi;
-import org.jdbi.v3.core.qualifier.QualifiedType;
-import org.jdbi.v3.json.Json;
 
 @Slf4j
-@SuppressWarnings("checkstyle:MissingJavadocType")
 @RequiredArgsConstructor
+@SuppressWarnings("checkstyle:MissingJavadocType")
 public class MysqlInputSource<C extends DataContext> implements AccessingInputSource<String, C> {
 
   public static final String SELECT_QUERY = """
       SELECT eid,context
       FROM <TABLE>
       WHERE processed = 0 AND state IN (<STATES>)
-      ORDER BY eid
+      ORDER BY eid ASC
       LIMIT :limit
       """;
 
@@ -36,6 +38,7 @@ public class MysqlInputSource<C extends DataContext> implements AccessingInputSo
 
   @Getter
   private final String name;
+  private final ObjectMapper objectMapper;
   private final Jdbi jdbi;
   private final Class<C> clazz;
   private final MeshineryMysqlProperties mysqlProperties;
@@ -43,69 +46,75 @@ public class MysqlInputSource<C extends DataContext> implements AccessingInputSo
   @Override
   @SuppressWarnings("checkstyle:MissingJavadocMethod")
   public Optional<C> getContext(String key, String id) {
-
-    return jdbi.inTransaction(handle -> {
-
-      var qualifiedType = QualifiedType.of(clazz).with(Json.class);
-
-      var firstResult = Blocking.byKey(
-          key,
-          () -> handle.createQuery(SPECIFIC_SELECT_QUERY)
+    return jdbi.inTransaction(handle -> Blocking.byKey(
+        key,
+        () -> {
+          var firstResult = handle.createQuery(SPECIFIC_SELECT_QUERY)
               .bind("state", key)
               .define("TABLE", clazz.getSimpleName())
               .bind("id", id)
-              .mapTo(qualifiedType)
-              .findFirst()
-      );
+              .mapToBean(InternalWrapper.class)
+              .findFirst();
 
-      if (firstResult.isEmpty()) {
-        return Optional.empty();
-      }
 
-      handle.createUpdate("UPDATE <TABLE> SET processed = 1 WHERE context -> '$.id' = :id")
-          .define("TABLE", clazz.getSimpleName())
-          .bind("id", firstResult.get().getId())
-          .execute();
+          if (firstResult.isEmpty()) {
+            return Optional.empty();
+          }
 
-      return firstResult;
-    });
+          handle.createUpdate("UPDATE <TABLE> SET processed = 1 WHERE context -> '$.id' = :id")
+              .define("TABLE", clazz.getSimpleName())
+              .bind("id", firstResult.get().getEid())
+              .execute();
+
+          return firstResult.map(x -> {
+            try {
+              return objectMapper.readValue(x.getContext(), clazz);
+            } catch (JsonProcessingException e) {
+              e.printStackTrace();
+              return null;
+            }
+          });
+        }
+    ));
 
   }
 
   @Override
+  @SneakyThrows
   public List<C> getInputs(List<String> keys) {
-    var simpleKey = String.join("-", keys);
     return jdbi.inTransaction(handle -> {
+      var result = handle.createQuery(SELECT_QUERY)
+          .define("TABLE", clazz.getSimpleName())
+          .bindList("STATES", keys)
+          .bind("limit", mysqlProperties.getLimit())
+          .mapToBean(InternalWrapper.class)
+          .list();
 
-      var qualifiedType = QualifiedType.of(clazz).with(Json.class);
+      if (result.isEmpty()) {
+        return Collections.emptyList();
+      }
 
-      //TODO
-      return Blocking.byKey(
-          simpleKey,
-          () -> {
-            var result = handle.createQuery(SELECT_QUERY)
-                .define("TABLE", clazz.getSimpleName())
-                .bindList("STATES", keys)
-                .bind("limit", mysqlProperties.getLimit())
-                .mapTo(qualifiedType)
-                .list();
+      var preparedIds = result.stream()
+          .map(InternalWrapper::getEid)
+          .collect(Collectors.toList());
 
-            if (result.isEmpty()) {
-              return Collections.emptyList();
+      handle.createUpdate("UPDATE <TABLE> SET processed = 1 WHERE eid IN (<LIST>)")
+          .bindList("LIST", preparedIds)
+          .define("TABLE", clazz.getSimpleName())
+          .execute();
+
+      return result.stream()
+          .map(InternalWrapper::getContext)
+          .map(x -> {
+            try {
+              return objectMapper.readValue(x, clazz);
+            } catch (JsonProcessingException e) {
+              e.printStackTrace();
+              return null;
             }
-
-            var preparedIds = result.stream()
-                .map(DataContext::getId)
-                .collect(Collectors.toList());
-
-            handle.createUpdate("UPDATE <TABLE> SET processed = 1 WHERE context -> '$.id' IN (<LIST>)")
-                .bindList("LIST", preparedIds)
-                .define("TABLE", clazz.getSimpleName())
-                .execute();
-
-            return result;
-          }
-      );
+          })
+          .filter(Objects::nonNull)
+          .toList();
     });
   }
 }
